[tool.poetry]
name = "bulk-message-whatsapp-automate"
version = "0.1.0"
description = ""
authors = ["Marcus Bragion <viniciusbragion@outlook.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
keyboard = "^0.13.5"
pyautogui = "^0.9.54"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
streamlit = "^1.37.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
